# ramag

./: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md  rust-toolchain.toml
crates/ramag-app/: Cargo.toml
crates/ramag-app/src/: lib.rs  tool_registry.rs
crates/ramag-app/src/usecases/: clip_thumb.rs  clipboard_service.rs  connection_service.rs  export.rs  mod.rs  mongo_service.rs  redis_service.rs
crates/ramag-bin/: Cargo.toml
crates/ramag-bin/src/: main.rs
crates/ramag-domain/: Cargo.toml
crates/ramag-domain/src/: error.rs  lib.rs
crates/ramag-domain/src/entities/: clipboard.rs  connection.rs  git.rs  history.rs  mod.rs  mongo.rs  pubsub.rs  query.rs  redis_keyspace.rs  redis_value.rs  schema.rs
crates/ramag-domain/src/traits/: clipboard_driver.rs  doc_driver.rs  driver.rs  git_driver.rs  kv_driver.rs  mod.rs  storage.rs  tool.rs
crates/ramag-infra-clipboard/: Cargo.toml
crates/ramag-infra-clipboard/src/: hotkey.rs  lib.rs  media.rs  paste.rs  pasteboard.rs  workspace_app.rs
crates/ramag-infra-git/: Cargo.toml
crates/ramag-infra-git/src/: blame.rs  cherry_pick.rs  clone.rs  commit_files.rs  commit_op.rs  conflict_content.rs  conflict_ops.rs  diff.rs  driver.rs  errors.rs  git_cmd.rs  handle.rs  history_ops.rs  lib.rs  log.rs  merge.rs  patch.rs  rebase.rs  rebase_interactive.rs  reflog.rs  remote.rs  runtime.rs  stash.rs  status.rs  tag.rs  work_ops.rs
crates/ramag-infra-git/tests/: integration.rs
crates/ramag-infra-mongodb/: Cargo.toml
crates/ramag-infra-mongodb/src/: command.rs  driver.rs  errors.rs  lib.rs  metadata.rs  pool.rs  query.rs  runtime.rs  types.rs
crates/ramag-infra-mongodb/tests/: integration.rs
crates/ramag-infra-mysql/: Cargo.toml
crates/ramag-infra-mysql/src/: errors.rs  execute.rs  lib.rs  metadata.rs  pool.rs  runtime.rs  types.rs
crates/ramag-infra-mysql/tests/: integration.rs
crates/ramag-infra-postgres/: Cargo.toml
crates/ramag-infra-postgres/src/: errors.rs  execute.rs  lib.rs  metadata.rs  pool.rs  types.rs
crates/ramag-infra-postgres/tests/: integration.rs
crates/ramag-infra-redis/: Cargo.toml
crates/ramag-infra-redis/src/: command.rs  driver.rs  errors.rs  lib.rs  pool.rs  runtime.rs  value.rs
crates/ramag-infra-redis/tests/: integration.rs
crates/ramag-infra-sql-shared/: Cargo.toml
crates/ramag-infra-sql-shared/src/: backend.rs  errors.rs  lib.rs  macros.rs  pool.rs  runtime.rs  sql.rs
crates/ramag-infra-sql-shared/tests/: spike.rs
crates/ramag-infra-storage/: Cargo.toml
crates/ramag-infra-storage/src/: encryption.rs  keyring.rs  lib.rs
crates/ramag-infra-storage/src/repos/: clip_repo.rs  connection_repo.rs  history_repo.rs  mod.rs  prefs_repo.rs  repo_repo.rs
crates/ramag-tool-clipboard/: Cargo.toml
crates/ramag-tool-clipboard/src/: actions.rs  lib.rs
crates/ramag-tool-clipboard/src/views/: helpers.rs  image_cache.rs  mod.rs
crates/ramag-tool-clipboard/src/views/clipboard_view/: card.rs  detail.rs  mod.rs  ops.rs  render.rs  settings.rs
crates/ramag-tool-clipboard/src/views/drawer/: card.rs  mod.rs
crates/ramag-tool-dbclient/: Cargo.toml
crates/ramag-tool-dbclient/src/: actions.rs  lib.rs  sql_completion.rs
crates/ramag-tool-dbclient/src/sql_completion/: alias.rs  keywords.rs  mod.rs  tests.rs
crates/ramag-tool-dbclient/src/views/: cell_edit_dialog.rs  connection_form.rs  connection_list.rs  connection_session.rs  dbclient_view.rs  ddl.rs  history_panel.rs  mod.rs  query_panel.rs  query_tab.rs  result_panel.rs  result_table.rs  table_tree.rs  tree_helpers.rs
crates/ramag-tool-dbclient/src/views/connection_form/: defaults.rs  mod.rs  ops.rs  render.rs
crates/ramag-tool-dbclient/src/views/connection_list/: mod.rs  render.rs  row.rs
crates/ramag-tool-dbclient/src/views/dbclient_view/: dialogs.rs  mod.rs  render.rs
crates/ramag-tool-dbclient/src/views/query_tab/: actions.rs  examples.rs  mod.rs  paging.rs  render.rs  sql_utils.rs
crates/ramag-tool-dbclient/src/views/result_panel/: export.rs  helpers.rs  mod.rs  ops.rs  render.rs
crates/ramag-tool-dbclient/src/views/result_table/: cells.rs  helpers.rs  mod.rs
crates/ramag-tool-dbclient/src/views/table_tree/: mod.rs  ops.rs  render.rs  row.rs
crates/ramag-tool-mongodb/: Cargo.toml
crates/ramag-tool-mongodb/src/: actions.rs  completion.rs  lib.rs
crates/ramag-tool-mongodb/src/views/: examples.rs  mod.rs  mongo_session.rs  query_panel.rs  query_tab.rs
crates/ramag-tool-mongodb/src/views/collection_tree/: mod.rs  ops.rs  row.rs
crates/ramag-tool-mongodb/src/views/result_panel/: cell.rs  drill.rs  edit.rs  (+8 more)
crates/ramag-tool-redis/: Cargo.toml
crates/ramag-tool-redis/src/: actions.rs  lib.rs
crates/ramag-tool-redis/src/views/: cli_panel.rs  connection_session.rs  form_shell.rs  hash_field_form.rs  key_create.rs  key_detail.rs  key_tree.rs  lines_editor.rs  list_element_form.rs  mod.rs  monitor_panel.rs  pairs_editor.rs  pubsub_panel.rs  set_element_form.rs  stream_entry_form.rs  ttl_edit.rs  ttl_picker.rs  value_display.rs  value_edit.rs  zset_element_form.rs
crates/ramag-tool-vcs/: Cargo.toml
crates/ramag-tool-vcs/src/: actions.rs  lib.rs  watcher.rs
crates/ramag-tool-vcs/src/views/: blame_view.rs  branch_picker.rs  commit_detail.rs  commit_graph.rs  confirm_dialogs.rs  conflict_editor.rs  diff_keys.rs  diff_panel.rs  diff_panel_split.rs  diff_split_cells.rs  file_tree.rs  helpers.rs  history_panel.rs  ide_layout.rs  mod.rs  pf_content.rs  project_files.rs  rebase_plan.rs  reflog_view.rs  repo_list.rs  sidebar.rs  sidebar_branches.rs  sidebar_remote.rs  sidebar_stash.rs  sidebar_tags.rs  syntax.rs  vcs_tabs.rs  vcs_toolbar.rs  vcs_view.rs  vcs_view_ops.rs  vcs_view_ops_file_tab.rs  vcs_view_ops_history.rs  vcs_view_ops_merge.rs  vcs_view_ops_patch.rs  vcs_view_ops_remote.rs  vcs_view_ops_repo.rs  vcs_view_ops_sync.rs  workspace_commit.rs  workspace_conflict.rs  workspace_diff.rs  (+1 more)
crates/ramag-ui/: Cargo.toml  build.rs
crates/ramag-ui/src/: actions.rs  activity_bar.rs  assets.rs  confirm_dialog.rs  home_view.rs  icons.rs  lib.rs  one_dark_modern.json  prompt_dialog.rs  shell.rs  theme.rs
(+45 files in other folders)
