[workspace]
resolver = "3"
members = [
    "crates/ramag-domain",
    "crates/ramag-app",
    "crates/ramag-infra-mysql",
    "crates/ramag-infra-redis",
    "crates/ramag-infra-storage",
    "crates/ramag-tool-dbclient",
    "crates/ramag-tool-redis",
    "crates/ramag-ui",
    "crates/ramag-bin",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["axemc"]
license = "Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/axemc/ramag"

[workspace.dependencies]
# 内部 crate 互相引用
ramag-domain = { path = "crates/ramag-domain" }
ramag-app = { path = "crates/ramag-app" }
ramag-infra-mysql = { path = "crates/ramag-infra-mysql" }
ramag-infra-redis = { path = "crates/ramag-infra-redis" }
ramag-infra-storage = { path = "crates/ramag-infra-storage" }
ramag-tool-dbclient = { path = "crates/ramag-tool-dbclient" }
ramag-tool-redis = { path = "crates/ramag-tool-redis" }
ramag-ui = { path = "crates/ramag-ui" }

# GPUI 框架（来自 zed-industries/zed git 主干）
# 故意不钉 rev：gpui-component 内部也是 git=未钉版引用 zed，如果这里钉了 rev，
# cargo 会把 ramag 钉版的 zed 和 gpui-component 引用的 unpinned zed 当作两份不同
# source 各自编译，类型不互通（Hsla 等会变成两个不同类型，编译百余个错）。
# 版本锁定靠 Cargo.lock（必须提交进 git）。需要升级时用 `cargo update -p gpui`。
# 升级前同步检查 gpui-component 是否升级了下方钉的 lsp-types / ropey 版本。
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    # runtime_shaders: shader 改为运行时编译，免去构建期对完整 Xcode（metal 命令）的依赖
    # 代价：App 首启慢 100-300ms（一次性）；macOS 系统自带 Metal 运行时，无需额外工具
    "runtime_shaders",
] }
gpui_macros = { git = "https://github.com/zed-industries/zed" }

# GPUI 组件库（来自 longbridge/gpui-component）
# 同样故意不钉 rev：版本固定靠 Cargo.lock。
# gpui-component 内部用的 lsp-types / ropey 版本必须与下方钉的一致，
# 升级时同步检查（不一致会编译失败：InputState 的 LSP 接口类型不兼容）。
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
    # SQL 语法高亮：开启 tree-sitter-sequel + 内置 highlights.scm
    # 让 code_editor("sql") 自动有关键字 / 字符串 / 数字 / 注释着色
    "tree-sitter-sql",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

# 数据库驱动（v0.1 仅 MySQL）
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "chrono",
    "uuid",
    "json",
] }

# Redis 驱动（v0.4 起，第二个数据库工具）
# - aio + tokio-comp：tokio 异步连接基础
# - tokio-rustls-comp：把 tokio runtime 与 rustls TLS 粘合（必需，否则
#   redis-rs 编译报 connect_tcp_tls 缺实现）；自动激活 tls-rustls
# - tls-rustls-webpki-roots：使用内置 webpki 根证书，免依赖系统证书库
# - connection-manager：自动重连的连接句柄（PoolCache 用此）
# - streams：XADD/XRANGE 等 Streams 命令的解析支持
redis = { version = "0.32", default-features = false, features = [
    "aio",
    "tokio-comp",
    "tokio-rustls-comp",
    "tls-rustls-webpki-roots",
    "connection-manager",
    "streams",
] }

# 嵌入式本地存储
redb = "3"

# 异步运行时（GPUI 内部 smol，sqlx 用 tokio，需桥接）
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
smol = "2"
async-trait = "0.1"
futures = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# JsonSchema（gpui Action 派生需要）
schemars = "1"

# 系统文件对话框（导出结果集时让用户选保存位置）
# 用默认 sync API（macOS 走 NSSavePanel，不阻塞事件循环）
rfd = "0.15"

# 错误处理
anyhow = "1"
thiserror = "2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

# 工具类
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
directories = "6"
once_cell = "1"

# Stage 1 新增：连接池缓存（线程安全 HashMap）
dashmap = "6"

# Stage 1 新增：凭证加密
aes-gcm = "0.10"
rand = "0.9"
hex = "0.4"

# Stage 1 新增：macOS 钥匙串集成
keyring = { version = "3", features = ["apple-native"] }

# Stage 1 新增：测试时启动临时 MySQL（dev-dependencies 用，但放 workspace 方便引用）
# 暂不加 testcontainers，先用真实数据库做集成测试

# Stage 6：SQL 自动补全 — gpui-component InputState 的 LSP 接口要求
# 版本必须与 gpui-component 内部使用的一致，否则类型不兼容
lsp-types = { version = "0.97.0", features = ["proposed"] }
ropey = { version = "=2.0.0-beta.1", features = [
    "metric_lines_lf",
    "metric_utf16",
] }

[workspace.lints.clippy]
# 严格但非教条
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Release：最大化性能（构建会显著更慢，但运行时最快、二进制最小）
# - opt-level = 3：最高优化等级
# - lto = "fat"：跨 crate 全程 LTO（与 thin/off 相比能多挤出 5–15% 性能）
# - codegen-units = 1：单线程代码生成，启用最大优化（牺牲编译并行）
# - strip = true：剥离符号信息，减小二进制体积
# - panic = "abort"：panic 直接终止进程，不生成栈展开代码
# - debug = false / debug-assertions = false / overflow-checks = false：默认值显式化
# - incremental = false：release 不做增量，避免阻碍跨 crate 优化
# 可选：target-cpu=native（通过 .cargo/config.toml 或 RUSTFLAGS 设置），
# 让 codegen 用本机 CPU 完整指令集（AVX2/NEON 等）；代价是产物不能跨机分发。
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.dev]
opt-level = 0
debug = 1
incremental = true
