[workspace]
resolver = "3"
members = [
    "crates/ramag-domain",
    "crates/ramag-app",
    "crates/ramag-infra-mysql",
    "crates/ramag-infra-postgres",
    "crates/ramag-infra-redis",
    "crates/ramag-infra-mongodb",
    "crates/ramag-infra-sql-shared",
    "crates/ramag-infra-storage",
    "crates/ramag-infra-git",
    "crates/ramag-tool-dbclient",
    "crates/ramag-tool-redis",
    "crates/ramag-tool-mongodb",
    "crates/ramag-tool-vcs",
    "crates/ramag-ui",
    "crates/ramag-bin",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["axemc"]
license = "Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/axemc/ramag"

[workspace.dependencies]
# 内部 crate
ramag-domain = { path = "crates/ramag-domain" }
ramag-app = { path = "crates/ramag-app" }
ramag-infra-mysql = { path = "crates/ramag-infra-mysql" }
ramag-infra-postgres = { path = "crates/ramag-infra-postgres" }
ramag-infra-redis = { path = "crates/ramag-infra-redis" }
ramag-infra-mongodb = { path = "crates/ramag-infra-mongodb" }
ramag-infra-sql-shared = { path = "crates/ramag-infra-sql-shared" }
ramag-infra-storage = { path = "crates/ramag-infra-storage" }
ramag-infra-git = { path = "crates/ramag-infra-git" }
ramag-tool-dbclient = { path = "crates/ramag-tool-dbclient" }
ramag-tool-redis = { path = "crates/ramag-tool-redis" }
ramag-tool-mongodb = { path = "crates/ramag-tool-mongodb" }
ramag-tool-vcs = { path = "crates/ramag-tool-vcs" }
ramag-ui = { path = "crates/ramag-ui" }

# GPUI（zed-industries/zed git 主干）
# 不钉 rev：与 gpui-component 共享 zed 源，钉版会让两份各自编译，类型不通（百余编译错）。
# 版本锁靠 Cargo.lock；升级用 `cargo update -p gpui`。
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    # runtime_shaders：shader 改运行时编译，免依赖 Xcode 完整版（首启慢 100-300ms）
    "runtime_shaders",
] }
gpui_macros = { git = "https://github.com/zed-industries/zed" }

# GPUI 组件库
# 升级时同步检查下方 lsp-types / ropey 与 gpui-component 内部一致，否则 InputState 接口不兼容。
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
    "tree-sitter-sql",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

# SQL 数据库驱动
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "chrono",
    "uuid",
    "json",
] }

# Redis 驱动
# tokio-rustls-comp + connection-manager 缺一不可：缺前者编译失败、缺后者无自动重连
redis = { version = "0.32", default-features = false, features = [
    "aio",
    "tokio-comp",
    "tokio-rustls-comp",
    "tls-rustls-webpki-roots",
    "connection-manager",
] }

# Git：gitoxide 纯 Rust 实现
gix = { version = "0.74", default-features = false, features = [
    "max-performance-safe",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "revision",
    "blob-diff",
    "status",
] }

# MongoDB：官方驱动 + BSON。bson-2 与 workspace 单独 bson="2" 对齐；
# compat-3-3-0 显式接受 mongodb 3.3+ 兼容性约束（mongodb crate 强制）；rustls 选 TLS
mongodb = { version = "3", default-features = false, features = [
    "rustls-tls",
    "bson-2",
    "compat-3-3-0",
] }
bson = "2"

# 嵌入式存储
redb = "3"

# 异步运行时（GPUI 用 smol，sqlx/redis-rs 用 tokio，需桥接）
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
smol = "2"
async-trait = "0.1"
futures = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# GPUI Action 派生
schemars = "1"

# 系统文件对话框（导出 / 选目录）
rfd = "0.15"

# 错误处理
anyhow = "1"
thiserror = "2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

# 工具
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
directories = "6"
once_cell = "1"

# 连接池缓存
dashmap = "6"

# 凭证加密
aes-gcm = "0.10"
rand = "0.9"
hex = "0.4"

# macOS 钥匙串
keyring = { version = "3", features = ["apple-native"] }

# SQL 补全：必须与 gpui-component 内部版本一致，否则 InputState 的 LSP 接口类型不兼容
lsp-types = { version = "0.97.0", features = ["proposed"] }
ropey = { version = "=2.0.0-beta.1", features = [
    "metric_lines_lf",
    "metric_utf16",
] }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# rustdoc：本地 cargo doc 静音；CI 不门禁 cargo doc
[workspace.lints.rustdoc]
broken_intra_doc_links = "allow"
private_intra_doc_links = "allow"
redundant_explicit_links = "allow"
invalid_html_tags = "allow"

# Release：最大化性能，编译变慢
# - lto=fat + codegen-units=1：跨 crate 全程 LTO，多挤 5-15% 性能
# - panic=abort：不生成栈展开代码
# - strip：剥离符号信息减小体积
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0
debug = 1
incremental = true
