[package]
name = "ramag-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ramag 应用层：Use Cases + ToolRegistry，编排 Domain，被 UI 调用"

[lints]
workspace = true

[dependencies]
ramag-domain = { workspace = true }

# 日志
tracing = { workspace = true }

# 并发数据结构（ToolRegistry 用 RwLock）
parking_lot = { workspace = true }

# 导出工具用
serde_json = { workspace = true }
hex = { workspace = true }

# 剪贴条目时间戳（workspace 既有依赖）
chrono = { workspace = true }

# 剪贴图片缩略图生成
image = { workspace = true }

[dev-dependencies]
# decide_capture 等纯逻辑测试无需额外 mock；保留位以备扩展
async-trait = { workspace = true }
