[package]
name = "ramag-infra-mysql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ramag MySQL 驱动实现（实现 Domain 的 Driver trait，封装 sqlx）"

[lints]
workspace = true

[dependencies]
ramag-domain = { workspace = true }
# 关系型 DB 共享层：runtime 桥接 / SqlBackend trait / impl_driver_for! 宏
ramag-infra-sql-shared = { workspace = true }

# MySQL 驱动
sqlx = { workspace = true }

# trait 上的 async fn
async-trait = { workspace = true }
tokio = { workspace = true }

# 时间类型
chrono = { workspace = true }

# JSON 类型
serde_json = { workspace = true }

# 日志
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
