[package]
name = "ramag-tool-clipboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ramag 剪贴板工具：历史卡片流 / 搜索筛选 / 悬浮抽屉快速粘贴"

[lints]
workspace = true

[dependencies]
ramag-domain = { workspace = true }
ramag-app = { workspace = true }
ramag-ui = { workspace = true }

# GPUI 渲染
gpui = { workspace = true }
gpui-component = { workspace = true }

# 快捷键 Action derive（gpui Action 宏要求 Deserialize + JsonSchema）
serde = { workspace = true }
schemars = { workspace = true }

# 时间显示（条目相对时间）
chrono = { workspace = true }

# 日志
tracing = { workspace = true }
