[package]
name = "ramag-tool-mongodb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ramag MongoDB 工具：仿 MySQL 三栏 UI（左 db/collection 树 + 中多 Tab 查询编辑 + 下结果）"

[lints]
workspace = true

[dependencies]
ramag-domain = { workspace = true }
ramag-app = { workspace = true }
ramag-ui = { workspace = true }

# GPUI
gpui = { workspace = true }
gpui-component = { workspace = true }

# 编辑器 / 过滤框补全 provider（实现 gpui-component CompletionProvider）
anyhow = { workspace = true }
lsp-types = { workspace = true }
ropey = { workspace = true }
parking_lot = { workspace = true }

# 结果导出：原生文件保存框 + 线程结果回传主线程
rfd = { workspace = true }
futures = { workspace = true }

# JSON 操作（编辑器内容解析 / pretty print）
serde = { workspace = true }
serde_json = { workspace = true }

# GPUI Action 派生（仅 derive 用）
schemars = { workspace = true }

# 日志
tracing = { workspace = true }
