[package]
name = "ramag-tool-redis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ramag Redis 工具：实现 Tool trait + 提供 Redis GUI（连接、Key 浏览、命令行）"

[lints]
workspace = true

[dependencies]
ramag-domain = { workspace = true }
ramag-app = { workspace = true }
ramag-ui = { workspace = true }

# GPUI
gpui = { workspace = true }
gpui-component = { workspace = true }

# 异步组合（key_detail 并发拉值 + TTL 用 futures::join）
futures = { workspace = true }

# 值显示增强：JSON pretty / base64 切换 / Gzip 解压
serde_json = { workspace = true }
base64 = "0.22"
flate2 = "1"

# 日志
tracing = { workspace = true }
