[package]
name = "ramag-tool-vcs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ramag VCS 工具：Git 可视化客户端（仓库管理 / 工作区 / commit / 分支等）"

[lints]
workspace = true

[dependencies]
ramag-domain = { workspace = true }
ramag-ui = { workspace = true }

# GPUI 渲染
gpui = { workspace = true }
gpui-component = { workspace = true }

# 异步
futures = { workspace = true }

# 快捷键 Action derive（gpui Action 宏要求 Deserialize + JsonSchema）
serde = { workspace = true }
schemars = { workspace = true }

# 文件系统监听：外部改动自动刷新工作区（依赖树中已有，零新增编译单元）
notify = { workspace = true }

# 语法高亮：SyntaxHighlighter 解析文本需要 Rope（diff / Project Files 代码着色）
ropey = { workspace = true }

# 时间显示（commit author / committer 时间）
chrono = { workspace = true }

# 系统文件对话框（选仓库目录）
rfd = { workspace = true }

# 日志
tracing = { workspace = true }

[dev-dependencies]
# 渲染测试：gpui test-support 提供 #[gpui::test] / TestAppContext / add_window_view（headless 渲染）
gpui = { workspace = true, features = ["test-support"] }
# mock GitDriver / Storage（trait 用 #[async_trait]）
async-trait = { workspace = true }
